Utilize async loaded fonts to avoid text flicker

--- a/web/static/scss/_base.scss
+++ b/web/static/scss/_base.scss
@@ -3,7 +3,7 @@ html {
   box-sizing: border-box;
   height: 100%;
   font-family: Roboto, 'Open Sans', Arial;
-  font-size: 12px;
+  font-size: 16px;
 }
 
 *, *::before, *::after {
