--- a/web/static/scss/_variables.scss
+++ b/web/static/scss/_variables.scss
@@ -1,6 +1,6 @@
 // Variables not seen here can be found in materialize/components/_variables.scss
 
-$off-white: color("grey", "lighten-4");
+$off-white: color("grey", "lighten-5");
 
 $primary-text: color("grey", "darken-4");
 $secondary-text: color("grey", "darken-1");
