--- a/web/static/scss/components/_navbar.scss
+++ b/web/static/scss/components/_navbar.scss
@@ -1,6 +1,6 @@
 .primary-nav {
   box-shadow: none;
-  padding: 0 3.5rem;
+  padding: 1rem 3.5rem;
   background: transparent;
   font-size: 1.4rem;
 }
